bug fixed
various little bugs squashed , added img for character

--- a/styles/index.css
+++ b/styles/index.css
@@ -55,7 +55,7 @@ button {
    
 }
 .images img{
-    display: flex;
+    display: none;
 }
 .stats div {
     font-size: 2rem;
